# mercury-lib

./: .gitignore  CONTRIBUTING.rst  LICENSE.txt  README.rst  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
frontend/: package.json
frontend/src/: App.tsx
frontend/src/components/: ForceGraph.tsx  Graph.tsx  HUD.tsx
frontend/src/lib/: graph.ts
frontend/src/types/: automata.ts  link.ts  node.ts
src/mercury/: exceptions.py
src/mercury/automata/: __init__.py  deterministic_finite_automata.py  deterministic_finite_transducer.py
src/mercury/decorators/: __init__.py  delta_function.py  output_function.py
src/mercury/static/: index.html
src/mercury/static/assets/: index-s1r6o7Io.js
src/mercury/types/: __init__.py  delta_function.py  state.py
src/mercury/web/: __init__.py
src/mercury/web/_dfa/: dfa_view.py
src/mercury/web/dfa/: dfa_schema.py  dfa_view.py
src/pygold/: __init__.py  exceptions.py  skeleton.py
src/pygold/automata/: deterministic_finite_automata.py  deterministic_finite_transducer.py
src/pygold/decorators/: delta_function.py  output_function.py
src/pygold/operations/: sets.py
src/pygold/types/: delta_function.py  state.py
src/pygold/web/dfa/: dfa_schema.py  dfa_view.py
tests/: conftest.py  test_automata.py  test_operations.py  test_skeleton.py  test_transducer.py  test_web.py
